# sdl-nine-standalone

./: CMakeLists.txt  README.rst  main.cpp
common/: CMakeLists.txt  compiler.h  debug.c  debug.h  library.c
d3d9-nine/: CMakeLists.txt  backend.c  d3d9_sdl.c  d3dadapter9.c  d3dadapter9.h  dri2.c  dri3.c  present.c  present.h  shader_validator.c  shader_validator.h  xcb_present.c  xcb_present.h
include/: d3d9_sdl.h
